2005-11-10	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
	* Mono.Cecil/CompactFrameworkCompatibility.cs
	  Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/CultureUtils.cs
	  Mono.Xml/SecurityParser.cs
	  Mono.Xml/SmallXmlParser.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  cecil.build
	  	Implement support for compiling on the CompactFramework
	
2005-11-08  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/TypeReference.cs:
		Fix a regression with 2.0 assemblies.

2005-11-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/CallSite.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ICallSite.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.dll.sources:
		Implement support for calli opcodes reading.

2005-11-01  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FunctionPointerType.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Work on function pointers.

	* Mono.Cecil/AssemblyInfo.cs:
		Increase Cecil SVN version.

	* Mono.Cecil/ArrayType.cs
	  Mono.Cecil/MethodSpecification.cs
	  Mono.Cecil/TypeSpecification.cs
	  Mono.Cecil/IMethodSpecification.cs
	  Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/IGenericInstanceType.cs
	  Mono.Cecil/GenericInstanceMethod.cs
	  Mono.Cecil/IModifierType.cs
	  Mono.Cecil/IPinnedType.cs
	  Mono.Cecil/ReferenceType.cs
	  Mono.Cecil/IGenericInstanceMethod.cs
	  Mono.Cecil/PinnedType.cs
	  Mono.Cecil/PointerType.cs