@@ -1,3 +1,10 @@
+2005-11-11  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Mono.Cecil.Metadata/MetadataWriter.cs
+		Add support for different strongname key size (between 384 
+		and 16384 bits) as now supported in fx 2.0. Default is still
+		1024 bits.
+
 2005-11-10	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
 	* Mono.Cecil/CompactFrameworkCompatibility.cs
 	  Mono.Cecil/SecurityDeclarationReader.cs
